# tarang

./: CMakeLists.txt  ChangeLog.rtf  README.md  TODO.rtf
info/: RUN1  prog_para.d
lib/: CMakeLists.txt
lib/IncFlow/: CMakeLists.txt  IncSF.cc  IncSF.h  IncVF.cc  IncVF.h  Nlin.cc  compute_divergence.cc  compute_pressure.cc  force_spectrum.cc
lib/IncFlow/misc/: elsasser.cc  field_k_fns.cc  force_alpha_beta.cc  ic_model.cc  (+4 more)
lib/IncFluid/: CMakeLists.txt  EnergyTr.h  IncFluid.cc  IncFluid.h  IncFluid_Time.cc  IncFluid_constants.h  add_force.cc  add_pressure_grad.cc  compute_dt.cc  file_operations.cc
lib/basis_basicfn/: CMakeLists.txt  basis_basicfn.cc  basis_basicfn.h  basis_basicfn_inline.h  extern_def_vars.h
lib/fields/: CMakeLists.txt  Csf.cc  Csf.h  Cvf.cc  Cvf.h  Rsf.cc  Rsf.h  Rvf.cc  Rvf.h  planar_struct_fn.cc  planar_struct_fn.h  struct_fn.cc  struct_fn.h  tarang_hdf5.cc  tarang_hdf5.h
lib/fields/array_fn/: array_basic.cc  array_basic.h  array_basic_hdf5.h  array_basic_inline.h
lib/fields/universal/: universal_basic.cc  universal_basic.h  universal_energy.cc  universal_energy.h  universal_misc.h
lib/four/: CMakeLists.txt  four_ET.cc  four_basic.cc  four_basic.h  four_energy.cc  four_energy.h  four_inline.h  four_tr.cc  four_tr.h
lib/plainfields/: CMakeLists.txt
lib/scft/: CMakeLists.txt  scft_ET.cc  scft_basic.cc  scft_basic.h  scft_energy.cc  scft_energy.h  scft_inline.h  scft_tr.cc  scft_tr.h
src/: CMakeLists.txt  main.cc  main.h  mem_usage.cc  read_diag_para.cc  read_para.cc
src/IFluid/: Ifluid_diag_main.cc  Ifluid_main.cc
src/IMHD/: IMHD_diag_main.cc  IMHD_main.cc
src/IScalar/: Iscalar_diag_main.cc  Iscalar_main.cc
src/Keplerian/: Keplerian_main.cc
src/NB/: NonBoussinesq_main.cc
src/RBslip/: RB_slip_diag_main.cc  RB_slip_main.cc
src/RBslipMHD/: RB_slipMHD_main.cc
(+61 files in other folders)
